Fixed the alignmnet of social story from 9 to 14 in just listed kit

--- a/public/_assets/listing-commands/css/marketing-steps-lc1.css
+++ b/public/_assets/listing-commands/css/marketing-steps-lc1.css
@@ -419,12 +419,12 @@ footer{
 	text-align: right;
 }
 /* just-listed kit start */
-.assets-steps .asset-container[data-title="Social Story 9"] a,
-.assets-steps .asset-container[data-title="Social Story 10"] a,
-.assets-steps .asset-container[data-title="Social Story 11"] a,
-.assets-steps .asset-container[data-title="Social Story 12"] a,
-.assets-steps .asset-container[data-title="Social Story 13"] a,
-.assets-steps .asset-container[data-title="Social Story 14"] a
+.assets-steps .asset-container[data-title="Social Story 9"] > a,
+.assets-steps .asset-container[data-title="Social Story 10"] > a,
+.assets-steps .asset-container[data-title="Social Story 11"] > a,
+.assets-steps .asset-container[data-title="Social Story 12"] > a,
+.assets-steps .asset-container[data-title="Social Story 13"] > a,
+.assets-steps .asset-container[data-title="Social Story 14"] > a
 {
 	display: flex;
 	min-height: 9.375rem;
